<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_dislike"
        android:title="favorite"
        app:showAsAction="always" />
</menu>